Rewrite header subtitle on main page.

--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -11,7 +11,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1>Code | Design | Innovate</h1>
-            <p>Here's the place for Piwik developers.</p>
+            <p><em>Welcome to the Piwik Developer Zone, the center of innovation in analytics.</em></p>
         </div>
     </div>
 {% endblock %}
