--- a/generator/template/pages/index.twig
+++ b/generator/template/pages/index.twig
@@ -21,7 +21,7 @@
 {% elseif 'method' == type and 'PiwikTracker' != value.class %}
 - [`{{ value.name }}()`]({{ markdown_path(class_path(value.class)) }}#{{ value.name|lower }}) &mdash; _Method in class_ {{ class_name(value.class, true) }}
 {% elseif 'property' == type and 'PiwikTracker' != value.class %}
-- [`${{ value.name }}()`]({{ markdown_path(class_path(value.class)) }}#${{ value.name|lower }}) &mdash; _Property in class_ {{ class_name(value.class, true) }}
+- [`${{ value.name }}`]({{ markdown_path(class_path(value.class)) }}#${{ value.name|lower }}) &mdash; _Property in class_ {{ class_name(value.class, true) }}
 {% endif %}
 {% endfor %}
 {% endfor %}
