--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -35,6 +35,7 @@
                 {% endfor %}
                 <li><a href="http://piwik.org/blog/category/development/" target="_blank">Blog</a></li>
                 <li><a href="http://piwik.org/" target="_blank">Piwik.org</a></li>
+                <li><a class="start-here-link" href="/guides/getting-started"><strong>Start Here!</strong></a></li>
             </ul>
             <ul class="nav navbar-nav pull-right">
                 <li>
