Fix in last commit.

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -94,7 +94,7 @@ $(document).ready(function () {
             return;
         }
 
-        $(e).addClass('php').wrap('<pre class="inline-pre"></pre>');
+        $(e).addClass('php').wrap('<pre class="inline-code-pre"></pre>');
         hljs.highlightBlock(e);
     });
 });
