--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -55,6 +55,19 @@ body {
     margin-bottom: 40px;
 }
 
+.categorized-teaser-item {
+    margin-bottom: 10px;
+    margin-left: 24px;
+}
+
+.category-list > .container:nth-child(2) > .categorized-teaser-item {
+    margin-top: 32px;
+}
+
+.category-list > .container:last-child > .categorized-teaser-item {
+    margin-bottom: 48px;
+}
+
 .social-footer {
     text-align: center;
     margin-top: 40px;
@@ -62,6 +75,14 @@ body {
 
 #sidebar .panel-title a {
     word-wrap: break-word;
+}
+
+.teaser-category-group-title {
+    background-color: #eee;
+}
+
+.teaser-category-group-title h1 {
+    line-height:2em;
 }
 
 /* First level of nav */
