--- a/app/templates/documentation.twig
+++ b/app/templates/documentation.twig
@@ -3,7 +3,9 @@
 
 {% block headline %}
     {% set title = 'Guides' %}
+    <div class="header-with-background">
     {{ parent() }}
+    </div>
 {% endblock %}
 
 {% block content %}
