--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -21,10 +21,18 @@
 
                             <div class="bs-sidebar">
                                 <ul class="nav nav-pills nav-stacked bs-sidenav">
-                                    {% for cat in categories %}
-                                        <li title="{{ cat.title|raw }}">
-                                            <a href="{{ cat.url }}"> {{ cat.title }}</a>
-                                        </li>
+                                    {% for cat, items in categories %}
+                                    <li>
+                                        <a><i class="icon-chevron-right"></i> {{ cat }}</a>
+
+                                        <ul class="nav">
+                                          {% for item in items %}
+                                          <li title="{{ item.title|raw }}">
+                                              <a href="{{ item.url }}"> {{ item.title }}</a>
+                                          </li>
+                                          {% endfor %}
+                                        </ul>
+                                    </li>
                                     {% endfor %}
                                 </ul>
                             </div>
