--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -30,6 +30,10 @@ body {
     margin-left: 5px;
 }
 
+.documentation img {
+    max-width: 100%;
+}
+
 .documentation h1 {
     padding-bottom: 9px;
     margin: 0px 0 20px;
