fixes #4243 display reference symbol in params list

--- a/generator/template/hooks.twig
+++ b/generator/template/hooks.twig
@@ -27,7 +27,7 @@ Callback Signature:
 {% if hook.comment and hook.comment.params %}
 {% for param in hook.comment.params %}
 
-- {% if param[0] and param[0][0] and param[0][0][0] %}`{{ param[0][0][0]|linkparser(hook)|raw }}`{% endif %}{% if param[1] %} `${{ param[1] }}`{% endif %}{% if param[1] %} {{ param[2]|inlinelinkparser(hook)|raw }}{% endif %}
+- {% if param[0] and param[0][0] and param[0][0][0] %}`{{ param[0][0][0]|linkparser(hook)|raw }}`{% endif %}{% if param[1] %} `{% if ('&$' ~ param[1]) in hook.arguments %}&{% endif %}${{ param[1] }}`{% endif %}{% if param[1] %} {{ param[2]|inlinelinkparser(hook)|raw }}{% endif %}
 
 {% endfor %}
 {% endif %}
