Allow guide pagination & split getting started guide into 3 parts.

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -294,6 +294,14 @@ body {
     overflow:hidden;
 }
 
+.guide-nav-prev {
+  float:left;
+}
+
+.guide-nav-next {
+  float:right;
+}
+
 /* bootstrap overrides */
 pre {
     background-color:transparent;
