--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -302,6 +302,13 @@ body {
   float:right;
 }
 
+h2[id]:before, h3[id]:before {
+  content:"";
+  display:block;
+  padding-top:52px;
+  margin-top:-52px;
+}
+
 /* bootstrap overrides */
 pre {
     background-color:transparent;
