--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -1,3 +1,5 @@
+{% if sectionTitle is defined %}{% set title = sectionTitle %}{% endif %}
+{% set setPageHeader = false %}
 {% extends 'layout/base.twig' %}
 
 {% block content %}
