--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -33,7 +33,6 @@
                     </li>
                 {% endfor %}
                 <li><a href="http://piwik.org/blog/category/development/" target="_blank">Blog</a></li>
-                <li><a href="http://piwik.org/" target="_blank">Piwik.org</a></li>
                 <li><a class="start-here-link" href="/guides/getting-started-part-1"><strong>Start Here!</strong></a></li>
             </ul>
             <ul class="nav navbar-nav pull-right">
@@ -72,7 +71,7 @@
         <hr/>
 
         <footer>
-            <p class="pull-left">&copy; Piwik.org</p>
+            <p class="pull-left">&copy; <a href="http://piwik.org">Piwik.org</a></p>
             <p class="pull-right">{% if linkToEditDocument is defined and linkToEditDocument %}
             <a href="{{ linkToEditDocument }}" target="_blank">Edit on GitHub</a>
                 {% endif %}</p>
