--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -25,9 +25,12 @@
 {% block footer %}
     <div class="container">
         <div class="center-block social-footer">
+            <a href="http://piwik.org/blog/2014/05/piwik-expanding-seeking-talented-software-engineer-new-zealand-poland/" class="btn btn-xs btn-success">We're hiring a software engineer!</a>
+            <br/><br/>
             <a href="http://piwik.org" class="btn btn-xs btn-piwik">Piwik.org</a>
             <a href="https://twitter.com/piwik" target="_blank" class="btn btn-xs btn-twitter"><i class="fa fa-twitter"></i> | Twitter</a>
             <a href="https://github.com/piwik" target="_blank" class="btn btn-xs btn-github"><i class="fa fa-github"></i> | GitHub</a>
+
         </div>
     </div>
 {% endblock %}
