--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -8,6 +8,12 @@
 {% endblock %}
 
 {% block content %}
+{% if class.tags("since")|length %}
+{% for since in class.tags("since") %}
+
+Since Piwik {{ since[0] }}
+{% endfor %}
+{% endif %}
 {% if class.shortdesc %}
 
 {{ class.shortdesc|inlinelinkparser(class)|raw }}
@@ -32,12 +38,17 @@ This {{ class_type(class) }} defines the following constants:
 
 {% endfor %}
 {% for constant in class.constants if constant.longdesc %}
-
 <a name="{{ constant.name|lower }}" id="{{ constant.name|lower }}"></a>
 <a name="{{ constant.name }}" id="{{ constant.name }}"></a>
 ### `{{ constant.name }}`
 
 {{ constant.longdesc|inlinelinkparser(class)|raw }}
+{% if constant.tags("since")|length %}
+{% for since in constant.tags("since") %}
+
+Since Piwik {{ since[0] }}
+{% endfor %}
+{% endif %}
 {% endfor %}
 {% endif %}
 {% if class.properties %}
@@ -56,6 +67,12 @@ This {{ class_type(class) }} defines the following properties:
 <a name="${{ property.name|lower }}" id="${{ property.name|lower }}"></a>
 <a name="{{ property.name }}" id="{{ property.name }}"></a>
 ### `${{ property.name }}`
+{% if property.tags("since")|length %}
+{% for since in property.tags("since") %}
+
+Since Piwik {{ since[0] }}
+{% endfor %}
+{% endif %}
 {% if property.shortdesc %}
 
 {{ property.shortdesc|inlinelinkparser(class)|raw }}
@@ -86,6 +103,12 @@ The {{ class_type(class) }} defines the following methods:
 <a name="{{ method.name|lower }}" id="{{ method.name|lower }}"></a>
 <a name="{{ method.name }}" id="{{ method.name }}"></a>
 ### `{{ method.name }}()`
+{% if method.tags("since")|length %}
+{% for since in method.tags("since") %}
+
+Since Piwik {{ since[0] }}
+{% endfor %}
+{% endif %}
 {% if method.shortdesc %}
 
 {{ method.shortdesc|inlinelinkparser(class)|raw }}
