--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -23,21 +23,21 @@ Since Piwik {{ since[0] }}
 {{ class.longdesc|inlinelinkparser(class)|raw }}
 {% endif %}
 {% set found = false %}
-{% for constant in class.constants if constant.longdesc %}
+{% for constant in constants if constant.longdesc %}
 {% set found = true %}
 {% endfor %}
-{% if found and class.constants %}
+{% if found and constants %}
 
 Constants
 ---------
 
 This {{ class_type(class) }} defines the following constants:
 
-{% for constant in class.constants if constant.longdesc %}
+{% for constant in constants if constant.longdesc %}
 - [`{{ constant.name }}`](#{{ constant.name|lower }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
 
 {% endfor %}
-{% for constant in class.constants if constant.longdesc %}
+{% for constant in constants if constant.longdesc %}
 <a name="{{ constant.name|lower }}" id="{{ constant.name|lower }}"></a>
 <a name="{{ constant.name }}" id="{{ constant.name }}"></a>
 ### `{{ constant.name }}`
@@ -51,18 +51,18 @@ Since Piwik {{ since[0] }}
 {% endif %}
 {% endfor %}
 {% endif %}
-{% if class.properties %}
+{% if properties %}
 
 Properties
 ----------
 
 This {{ class_type(class) }} defines the following properties:
 
-{% for property in class.properties %}
+{% for property in properties %}
 - [`${{ property.name }}`](#${{ property.name|lower }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
 
 {% endfor %}
-{% for property in class.properties %}
+{% for property in properties %}
 
 <a name="${{ property.name|lower }}" id="${{ property.name|lower }}"></a>
 <a name="{{ property.name }}" id="{{ property.name }}"></a>
@@ -87,19 +87,19 @@ Since Piwik {{ since[0] }}
 {{ member_signature("property", property, class) }}
 {% endfor %}
 {% endif %}
-{% if class.methods %}
+{% if methods %}
 
 Methods
 -------
 
 The {{ class_type(class) }} defines the following methods:
 
-{% for method in class.methods %}
+{% for method in methods %}
 - [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
 
 {% endfor %}
 
-{% for method in class.methods %}
+{% for method in methods %}
 <a name="{{ method.name|lower }}" id="{{ method.name|lower }}"></a>
 <a name="{{ method.name }}" id="{{ method.name }}"></a>
 ### `{{ method.name }}()`
