--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -95,14 +95,14 @@ Methods
 The {{ class_type(class) }} defines the following methods:
 
 {% for method in methods %}
-- [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
+- [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|inlinelinkparser(class)|raw }}{% endif %}{% if class.methods[method.name] is not defined %} *inherited from* {{ class_name(method.getClass, true, "", true) }}{%endif%}
 
 {% endfor %}
 
 {% for method in methods %}
 <a name="{{ method.name|lower }}" id="{{ method.name|lower }}"></a>
 <a name="{{ method.name }}" id="{{ method.name }}"></a>
-### `{{ method.name }}() {% if class.methods[method.name] is not defined %}*inherited from*` {{ class_name(method.getClass, true, "", true) }}{%else%}`{%endif%}
+### `{{ method.name }}()`
 {% if method.tags("since")|length %}
 {% for since in method.tags("since") %}
 
