--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -59,7 +59,7 @@ Properties
 This {{ class_type(class) }} defines the following properties:
 
 {% for property in properties %}
-- [`${{ property.name }}`](#${{ property.name|lower }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
+- [`${{ property.name }}`](#${{ property.name|lower }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|inlinelinkparser(class)|raw }}{% endif %}{% if class.properties[property.name] is not defined %} Inherited from {{ class_name(property.getClass, true, "", true) }}{%endif%}
 
 {% endfor %}
 {% for property in properties %}
@@ -95,7 +95,7 @@ Methods
 The {{ class_type(class) }} defines the following methods:
 
 {% for method in methods %}
-- [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|inlinelinkparser(class)|raw }}{% endif %}{% if class.methods[method.name] is not defined %} *inherited from* {{ class_name(method.getClass, true, "", true) }}{%endif%}
+- [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|inlinelinkparser(class)|raw }}{% endif %}{% if class.methods[method.name] is not defined %} Inherited from {{ class_name(method.getClass, true, "", true) }}{%endif%}
 
 {% endfor %}
 
