--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -34,7 +34,7 @@ Constants
 This {{ class_type(class) }} defines the following constants:
 
 {% for constant in constants if constant.longdesc %}
-- [`{{ constant.name }}`](#{{ constant.name|lower }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|inlinelinkparser(class)|raw }}{% endif %}
+- [`{{ constant.name }}`](#{{ constant.name|lower }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|inlinelinkparser(class)|raw }}{% endif %}{% if class.constants[constant.name] is not defined %} Inherited from {{ class_name(constant.getClass, true, "", true) }}{%endif%}
 
 {% endfor %}
 {% for constant in constants if constant.longdesc %}
