Refactored the home page and the template

--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -10,8 +10,14 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1>Code | Design | Innovate</h1>
-            <p><em>Welcome to the Piwik Developer Zone, the center of innovation in analytics.</em></p>
+            <h1>
+                Code
+                <span class="text-muted">|</span>
+                Design
+                <span class="text-muted">|</span>
+                Innovate
+            </h1>
+            <p>Welcome to the Piwik Developer Zone, the center of innovation in analytics.</p>
         </div>
     </div>
 {% endblock %}
