--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -3,7 +3,7 @@
 <head>
     <title>{% if title|default is not empty %}{{ title }} - {% endif %}Piwik Analytics - Developer Docs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/bootstrap.min.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
+    <link href="/css/bootstrap-theme.min.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <link href="/css/font-awesome.min.css?{{ revision|e('html_attr') }}" rel="stylesheet">
     <link href="/css/highlightjs/github.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <link href="/css/app.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -32,8 +32,6 @@
                         <a href="{{ item.url }}">{{ item.title }}</a>
                     </li>
                 {% endfor %}
-                <li><a href="http://piwik.org/blog/category/development/" target="_blank">Blog</a></li>
-                <li><a class="start-here-link" href="/guides/getting-started-part-1"><strong>Start Here!</strong></a></li>
             </ul>
             <ul class="nav navbar-nav pull-right">
                 <li>
