--- a/app/templates/macros.twig
+++ b/app/templates/macros.twig
@@ -1,22 +1,45 @@
 {% macro teaser_list(teasers) %}
     {% for url,item in teasers %}
+
         {% if loop.index0 % 3 == 0 %}
-        <div class="row">
+            <div class="row">
         {% endif %}
+
         <div class="col-xs-12 col-sm-6 col-md-4 teaser-item">
-            <h2>{{ item.title }}</h2>
+            <h2>
+                <span class="text-muted">#</span>
+                <a href="{{ item.url }}">{{ item.title }}</a>
+            </h2>
+
             <p>{{ item.description }}</p>
-            <p><a class="btn btn-primary" href="{{ item.url }}"
-                {% if 'http' == item.url[:4] %}
-                    target="_blank"
-                {% endif %}
-                role="button">{{ item.callToAction|default('Learn more') }} &raquo;</a></p>
+
+            {% if item.callToAction %}
+                <p><a class="btn btn-primary" href="{{ item.url }}"
+                            {% if 'http' == item.url[:4] %}
+                                target="_blank"
+                            {% endif %}
+                      role="button">{{ item.callToAction|default('Learn more') }} &raquo;</a></p>
+            {% endif %}
+
+            {% if item.links %}
+                <ul>
+                    {% for title, url in item.links %}
+                        <li>
+                            <a href="{{ url }}">{{ title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
+
         {% if loop.index0 % 3 == 2 or loop.last %}
-        </div>
+            </div>
+            <hr/>
         {% endif %}
+
     {% endfor %}
 {% endmacro %}
+
 {% macro categorized_teaser_list(teasers) %}
     {% for category,items in teasers %}
       <div class="category-list">
