Reorganized articles into several sections: "Integrate Piwik", "Develop Plugins", "Develop Piwik"

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -82,7 +82,7 @@ body {
 }
 
 .header-with-background {
-    background-color:#0859A8;
+    background-color: #18bc9c;
     margin-top:-28px;
 }
 
@@ -107,7 +107,7 @@ body {
 }
 
 .teaser-category-group-title {
-    background-color: #eee;
+    background-color: #ecf0f1;
 }
 
 .teaser-category-group-title h1 {
