Set the documentation summary as "affix" so that it stays on screen while scrolling

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -371,3 +371,17 @@ pre.inline-code-pre>code {
     margin-left: 5px;
     color: #9E9E9E;
 }
+
+.affix {
+    width: inherit;
+    position: fixed;
+    top: 80px;
+}
+.affix-bottom {
+    width: inherit;
+    position: absolute;
+    top: auto;
+    bottom: 100px;
+}
+.affix-top {
+}
