--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -80,6 +80,7 @@
 
 <script src="/js/jquery.js?{{ revision|e('html_attr') }}"></script>
 <script src="/js/bootstrap.min.js?{{ revision|e('html_attr') }}"></script>
+<script src="/js/bootstrap2-typeahead.js?{{ revision|e('html_attr') }}"></script>
 <script src="/js/app.js?{{ revision|e('html_attr') }}"></script>
 <script src="/js/highlight.pack.js?{{ revision|e('html_attr') }}"></script>
 <script type="text/javascript">
