--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -6,7 +6,7 @@
 
     <div class="col-md-3 bs-side">
 
-        <div class="panel-group expand" id="sidebar">
+        <div class="panel-group expand" id="sidebar" data-spy="affix" data-offset-top="10" data-offset-bottom="100">
             {% if categories|length %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -80,13 +80,15 @@
             {% endif %}
         </div>
     </div>
+
     <div class="col-md-7 documentation">
         {{ doc|raw }}
         {% if thisItem.prev is defined or thisItem.next is defined %}
-        <div class="guide-navigation">
-          {% if thisItem.prev is defined %}<a class="guide-nav-prev" href="{{ thisItem.prev }}">&laquo; Previous</a>{% endif %}
-          {% if thisItem.next is defined %}<a class="guide-nav-next" href="{{ thisItem.next }}">Next &raquo;</a>{% endif %}
-        </div>
+            <div class="guide-navigation">
+                {% if thisItem.prev is defined %}<a class="guide-nav-prev" href="{{ thisItem.prev }}">&laquo; Previous</a>{% endif %}
+                {% if thisItem.next is defined %}<a class="guide-nav-next" href="{{ thisItem.next }}">Next &raquo;</a>{% endif %}
+            </div>
         {% endif %}
     </div>
+
 {% endblock %}
