--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -47,7 +47,7 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#sidebar" href="#collapseTwo">
-                                {{ sectionTitle }}
+                                {{ sectionTitle|striptags|raw }}
                             </a>
                         </h4>
                     </div>
