Improved the "affix" sidebar display in case it gets too long for the screen

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -376,12 +376,15 @@ pre.inline-code-pre>code {
     width: inherit;
     position: fixed;
     top: 80px;
+    /* When the sidebar content gets too long for the screen */
+    max-height: 85%;
+    overflow-y: auto;
 }
 .affix-bottom {
     width: inherit;
     position: absolute;
     top: auto;
-    bottom: 100px;
+    bottom: 0;
 }
 .affix-top {
 }
