Display the footer on the homepage

--- a/app/templates/support.twig
+++ b/app/templates/support.twig
@@ -3,8 +3,12 @@
 {% extends 'layout/base.twig' %}
 {% from "macros.twig" import teaser_list %}
 
+
 {% block headline %}
-    {{ parent() }}
+    <div class="header-with-background">
+        {{ parent() }}
+    </div>
+    <p></p>
 {% endblock %}
 
 {% block content %}
