fixes #19 Added a 404 page + Piwik tracking for 404s

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -94,6 +94,7 @@ $(document).ready(function () {
     _paq.push(["setCookieDomain", "*.piwik.org"]);
     _paq.push(["trackPageView"]);
     _paq.push(["enableLinkTracking"]);
+    {% block piwik_customization %}{% endblock %}
         
     function track() {
 
